--- a/G13Reto01/index.html
+++ b/G13Reto01/index.html
@@ -12,49 +12,33 @@
             <div class="photo">
                 <img src="./images/photo.jpg" alt="Foto de perfil">
             </div>
-            <h1>Jean Pool Zambrano Hernandez</h1>
-            <p>Correo Electrónico: jean.zambrano.talentotech@usa.edu.co</p>
-            <p>Teléfono: +57 320 444 3393</p>
-            <p>Dirección: Calle 20 # 5 94, Mosquera, Cundinamarca</p>
+            <h1>Lina Rocio Cadena P</h1>
+            <p>Correo Electrónico: lina.cadena.talentotech@usa.edu.co</p>
+            <p>Teléfono: +57 320 777 3777</p>
+            <p>Dirección: Calle 77 # 7 97, Bogota D.C</p>
         </header>
 
         <section class="objective">
             <h2>Objetivo Profesional</h2>
-            <p>Ser un data science que aporte valor a diferentes modelos de negocios mediante el uso intensivo y estrategico de los datos.</p>
+            <p>Ser una Data Science especializada en proyectos financieros y de cooperación internacional.</p>
         </section>
 
         <section class="experience">
             <h2>Experiencia Laboral</h2>
             <div class="job">
                 <h3>Ceiba Software</h3>
-                <p><strong>Posición:</strong> Arquitecto Desarrollador</p>
-                <p><strong>Fecha:</strong> Septiembre 2023 - Actualidad</p>
+                <p><strong>Posición:</strong> Desarrollador Backend</p>
+                <p><strong>Fecha:</strong> Enero 2021 - Actualidad</p>
                 <p>Desarrollador FullStack.</p>
-            </div>
-            <div class="job">
-                <h3>SOAINT</h3>
-                <p><strong>Posición:</strong> Implementador</p>
-                <p><strong>Fecha:</strong> Abril 2021 - Septiembre 2023</p>
-                <p>Desarrollador Backend.</p>
             </div>
         </section>
 
         <section class="education">
             <h2>Educación</h2>
             <div class="education-item">
-                <h3>Escuela Tecnológica Instituto Técnico Central</h3>
-                <p><strong>Título:</strong> Ingeniero de Sistemas</p>
-                <p><strong>Fecha:</strong> 2020 - 2022</p>
-            </div>
-            <div class="education-item">
-                <h3>Escuela Tecnológica Instituto Técnico Central</h3>
-                <p><strong>Título:</strong> Tecnologo en Desarrollo de Software</p>
-                <p><strong>Fecha:</strong> 2019 - 2019</p>
-            </div>
-            <div class="education-item">
-                <h3>Escuela Tecnológica Instituto Técnico Central</h3>
-                <p><strong>Título:</strong> Tecnico Profesional en Computación</p>
-                <p><strong>Fecha:</strong> 2016 - 2018</p>
+                <h3>SENA</h3>
+                <p><strong>Título:</strong> Tecnico de programción de software</p>
+                <p><strong>Fecha:</strong> 2018 - 2021</p>
             </div>
         </section>
     </div>
