--- a/G13Reto01/index.html
+++ b/G13Reto01/index.html
@@ -20,7 +20,7 @@
 
         <section class="objective">
             <h2>Objetivo Profesional</h2>
-            <p>Ser una Data Science especializada en proyectos financieros y de cooperación internacional.</p>
+            <p>Ser una Data Science especializada en Proyectos Financieros y de Cooperación Internacional.</p>
         </section>
 
         <section class="experience">
